Version 0.3.23 Beta

- When a new message is received instead of displaying the address it will display the name you assigned to that address, assuming the address is in your addressbook (only applies to relay nodes)

Version 0.3.22 Beta

- Fixed an error with the check command when un-timestamed messages are in the database

Version 0.3.21 Beta

- Fixed multiple entries into the addressbook.db
- Added updating to addressbook (simple insert a new address with the same name to update it)
- Added remove_address command in order to delete from the addressbook

Version 0.3.2 Beta

- Added Timestamp to messages
- Added sent command for checking sent messages
- Added sent_delete command for deleting messages in the sent.db file

Version 0.3.1 Beta

- Fixed RSA signature bug
- Added version command

Version 0.3.00 Beta

- Added RSA Signatures to messages & message deleations

Version 0.2.89 Beta

- Blank entries can no longer be inserted into the addressbook.db
- Added new command "addresses" shows all addresses in your address book

Version 0.2.88 Beta

- Fixed Connection reset by peer error

Version 0.2.87 Beta

- Added purge command to delete all messages sent to the node

Version 0.2.86 Beta

- When enter is pressed the previous command is no longer executed
- Fixed invalid "To: " field bug

Version 0.2.85 Beta

- Fixed long message error bug
- Fixed checkin bug

Version 0.2.84 Beta

- Key size changed from 512 to 1024

Version 0.2.83 Beta

- Added documentation to commands

Version 0.2.82 Beta

- Added timeout to delete.py
- User is no longer notified when a node "checks in"
- General bug fixes

Version 0.2.81 Beta

- Spelling errors

Version 0.2.8 Beta

- RSA is now working side by side with AES so that there is no message limit
- RSA key shortened to 512 bytes for faster generation
- Better POW

Version 0.2.7 Beta

- Proof-of-Work has been added

Version 0.2.6 Beta

- eval() exploit now fixed.
- Bug fix in broker

Version 0.2.5 Beta * Major Update
